--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-    "name": "hardhat-project",
-    "devDependencies": {
-      "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-      "hardhat": "^2.22.14"
-    },
-    "dependencies": {
-      "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
-      "@nomicfoundation/hardhat-ethers": "^3.0.6",
-      "@nomicfoundation/hardhat-ignition": "^0.15.4",
-      "@openzeppelin/contracts": "^5.0.2",
-      "@upstash/redis": "^1.31.3",
-      "dayjs": "^1.11.11",
-      "dotenv": "^16.4.5",
-      "ethers": "^6.12.1",
-      "nyc": "^15.1.0",
-      "solidity-coverage": "^0.8.13"
-    },
-    "scripts": {
-      "compile": "hardhat compile",
-      "coverage": "hardhat coverage",
-      "test": "hardhat test",
-      "node": "hardhat node"
-    }
+  "name": "hardhat-project",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "hardhat": "^2.22.16"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition": "^0.15.8",
+    "@openzeppelin/contracts": "^5.1.0",
+    "@types/chai": "^5.0.1",
+    "@upstash/redis": "^1.31.3",
+    "chai": "4.4.1",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
+    "nyc": "^15.1.0",
+    "solidity-coverage": "^0.8.13"
+  },
+  "scripts": {
+    "compile": "hardhat compile",
+    "coverage": "hardhat coverage",
+    "test": "hardhat test",
+    "node": "hardhat node"
   }
+}
