--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "@mui/system": "^6.1.8",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "ethers": "^6.13.4",
     "lucide-react": "^0.460.0",
